# search-api-decision-surface

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  searchapi_eval_research_proposal_impl_plan.docx
config/: experiment.yaml
data/: 100-dataset-selection-rationale.md  trace-schema-v1.md
docs/: draft-metrics.md  search-api-provider-pairing-eval-proposal.md
paper/: Makefile  README.md  appendix_shared.tex  em_semantic_audit_modification.md  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main_preprint.aux  main_preprint.bbl  main_preprint.blg  main_preprint.fdb_latexmk  main_preprint.fls  main_preprint.out  main_preprint.tex  main_submission.bbl  main_submission.tex  paper_shared.tex  preamble.tex  refs.bib
paper2/: .latexmkrc  Makefile  paper_shared.tex
results/: brave_smoke_latest_metrics.json  em_vs_semantic_audit.tsv  phase1_100_metrics.json  phase1_firecrawl_100_latest_metrics.json  phase1_firecrawl_100_latest_traces.jsonl  phase1_firecrawl_100_metrics.json  phase1_tavily_100_metrics.json
review/: review.md  tasksplit.md
scripts/: build_judge_validation_queue.py  build_provider_comparison.py  evaluate_traces.py  judge_validation_app.py  policy_ablation.py  render_trace.py  run_kimi_surface_v3_all_visible_with_cache.sh  run_kimi_surface_v3_firecrawl_slot2.sh  run_llm_judge.py  run_phase1.py  select_phase1_queries.py  task1_support_split_numbers.py  task4_bootstrap_uncertainty.py  trace_dashboard.py
skills-prompts/: exa-searchapi-setup.md
tests/: test_agent_trace_requests.py  test_brave_provider.py  (+9 more)
(+155 files in other folders)
